--- a/frontend/components/Form/form.module.css
+++ b/frontend/components/Form/form.module.css
@@ -1,22 +1,3 @@
-/* LOGO */
-.logoContainer {
-  margin: 3rem auto 0;
-  height: 10vh;
-  width: 97%;
-  background-color: rgb(65, 168, 176);
-  display: flex;
-  justify-content: space-between;
-}
-
-.logoImgContainer {
-  height: 6rem;
-  width: 20rem;
-  background-color: green;
-  margin: 1.5rem 2.5rem;
-}
-
-/* END LOGO */
-
 /* SEARCH SECTION */
 
 .searchContainer {
@@ -30,7 +11,6 @@
 
 .searchMain {
   flex-grow: 3;
-
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
@@ -56,3 +36,5 @@
   font-size: 2rem;
   padding: 0.5rem;
 }
+
+/* END SEARCH SECTIOn */
