--- a/frontend/components/Form/player.module.css
+++ b/frontend/components/Form/player.module.css
@@ -18,10 +18,12 @@
 .playBtn {
   height: 5rem;
   width: 5rem;
-  padding: 1rem;
+  padding: 1.5rem;
   border-radius: 50%;
   color: #fc561e;
-  border: 1px solid #fc561e;
+  border: 0.1rem solid #fc561e;
+  background-color: #fefefe;
+  outline: none;
 }
 
 /* PROGRESS */
@@ -29,7 +31,7 @@
 .progress {
   background-color: #eee;
   border-radius: 5px;
-  width: 80%;
+  width: 70%;
   height: 1rem;
   overflow: hidden;
   cursor: pointer;
@@ -40,4 +42,46 @@
   height: 100%;
   -webkit-transition: width 0.2s ease-in;
   transition: width 0.2s ease-in;
+}
+
+/* TIMER */
+.timer {
+  color: #fc561e;
+}
+
+/* VOLUME */
+.volumeControl {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0.5rem;
+}
+
+.btnVolumeControl {
+  height: 5rem;
+  width: 5rem;
+  display: inline-block;
+  margin: 1rem;
+  padding: 1.3rem;
+  color: #fc561e;
+  border: 0.1rem solid #fc561e;
+  background-color: #fefefe;
+  position: relative;
+  z-index: 10;
+  transform: translateY(25%);
+}
+
+.rangeVolumeControl {
+  display: block;
+  height: 0.1rem;
+  width: 5rem;
+  transition: display 2s;
+  margin: 1rem 0;
+  background: red;
+  transform: translateY(-2000%);
+  transition: 0.2s ease-in-out;
+}
+
+.volumeControl:hover .rangeVolumeControl {
+  transform: translateY(1000%);
 }
