--- a/frontend/components/MusicPlayer/player.module.css
+++ b/frontend/components/MusicPlayer/player.module.css
@@ -1,98 +1,7 @@
-.width {
-  width: 100%;
-}
-
-.height {
-  height: 5rem;
-  padding: 2rem;
-}
-
-/* old player */
-
 .container {
   flex-grow: 1;
   padding: 1rem;
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
 }
-
-/*.title {
-  flex-grow: 5;
-  width: 100%;
-  text-align: center;
-  margin: 1rem auto;
-}*/
-/* PLAYER */
-
-/*.playBtn {
-  height: 5rem;
-  width: 5rem;
-  padding: 1.5rem;
-  border-radius: 50%;
-  color: #fc561e;
-  border: 0.1rem solid #fc561e;
-  background-color: #fefefe;
-  outline: none;
-}*/
-
-/* PROGRESS */
-
-/*.progress {
-  background-color: #eee;
-  border-radius: 5px;
-  width: 70%;
-  height: 1rem;
-  overflow: hidden;
-  cursor: pointer;
-}
-
-.inner {
-  background-color: #fc561e;
-  height: 100%;
-  -webkit-transition: width 0.2s ease-in;
-  transition: width 0.2s ease-in;
-}*/
-
-/* TIMER */
-/*.timer {
-  color: #fc561e;
-}*/
-
-/* VOLUME */
-/*.volumeControl {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0.5rem;
-}
-
-.btnVolumeControl {
-  height: 5rem;
-  width: 5rem;
-  display: inline-block;
-  margin: 1rem;
-  padding: 1.3rem;
-  color: #fc561e;
-  border: 0.1rem solid #fc561e;
-  background-color: #fefefe;
-  position: relative;
-  z-index: 10;
-  transform: translateY(25%);
-}
-
-.rangeVolumeControl {
-  display: block;
-  height: 0.1rem;
-  width: 5rem;
-  transition: display 2s;
-  margin: 1rem 0;
-  background: red;
-  transform: translateY(-2000%);
-  transition: 0.2s ease-in-out;
-}
-
-.volumeControl:hover .rangeVolumeControl {
-  transform: translateY(1000%);
-}*/
