--- a/frontend/components/Home/home.module.css
+++ b/frontend/components/Home/home.module.css
@@ -19,13 +19,16 @@
 
 .searchInput {
   width: 100%;
+  height: 4rem;
   font-size: 2rem;
-  padding: 0.5rem;
+  padding: 1.2rem;
+  border-radius: 20px;
+  outline: none;
 }
 
 .searchBtnContainer {
   width: 100%;
-  margin: 0.5rem auto;
+  margin: 1rem auto;
   display: flex;
   justify-content: center;
 }
@@ -33,5 +36,8 @@
 .searchBtn {
   padding: 0.5rem;
   width: 10%;
+  border-radius: 20px;
+  font-size: 2rem;
+  cursor: pointer;
   text-align: center;
 }
