--- a/frontend/components/Layout/layout.module.css
+++ b/frontend/components/Layout/layout.module.css
@@ -1,3 +1,9 @@
+.mainContainer {
+  min-width: 1000px;
+  width: 1200px;
+  margin: 0 auto;
+}
+
 .container {
   display: flex;
   justify-content: center;
