--- a/frontend/components/MusicPlayer/waveform.module.css
+++ b/frontend/components/MusicPlayer/waveform.module.css
@@ -1,18 +1,16 @@
 .container {
   display: flex;
   width: 100%;
-  height: fit-content;
-  /*border: 1px solid red;*/
 }
 
 .wave {
   display: block;
   width: 100%;
-  height: 100px;
+  height: 100%;
 }
 
 .button {
-  background: OrangeRed;
+  background: violet;
   color: white;
   border: none;
   width: 60px;
@@ -24,7 +22,7 @@
 }
 
 .button:hover {
-  background: #d63d05;
+  background: purple;
 }
 
 .playlist {
