--- a/frontend/css/global.css
+++ b/frontend/css/global.css
@@ -10,7 +10,5 @@
 
 body {
   font-size: 1.6rem;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: gray;
+  font-family: Helvetica, Arial, sans-serif;
 }
